--- a/index.html
+++ b/index.html
@@ -645,9 +645,7 @@
             <div class="box">
                 <h3>contact info</h3>
                 <a href="#">+91 9506199872</a>
-                <a href="#">+91 6284064247</a>
                 <a href="#">princeyadav332@gmail.com</a>
-                <a href="#">devansham223@gmail.com</a>
                 <a href="#">Hoshiarpur, 146021 </a>
             </div>
 
@@ -661,7 +659,7 @@
 
         </div>
 
-        <div class="credit"> copyright @ 2022 by <span>Prince / Devansham </span> </div>
+        <div class="credit"> copyright @ 2022 by <span>Prince Yadav</span> </div>
 
     </section>
 
